tests/core/snapshots/call-multiple-steps-piping.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "abc": 3
    }
  }
}
