tests/core/snapshots/call-multiple-steps-piping.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  a(input: JSON): JSON
  a_input(input: JSON): JSON
  abc(input: JSON): JSON
  abc_input(input: JSON): JSON
  b(input: JSON): JSON
  b_input(input: JSON): JSON
  c(input: JSON): JSON
  wrap_args: JSON
  wrap_input(input: JSON): JSON
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
