tests/core/snapshots/call-mutation.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "attachPostToFirstUser": {
        "name": "foo"
      }
    }
  }
}
