tests/core/snapshots/call-mutation.md_4.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "insertMockedPost": {
        "body": "post-body"
      }
    }
  }
}
