tests/core/snapshots/call-mutation.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

type Mutation {
  attachPostToFirstUser(postId: Int!): User
  attachPostToUser(postId: Int!, userId: Int!): User
  insertMockedPost: Post
  insertPost(input: PostInput): Post
  insertPostToFirstUser(input: PostInputWithoutUserId): Post
  insertPostToUser(input: PostInputWithoutUserId!, userId: Int!): Post
}

scalar PhoneNumber

type Post {
  body: String
  id: Int
  title: String
  userId: Int
}

input PostInput {
  body: String
  title: String
  userId: Int
}

input PostInputWithoutUserId {
  body: String
  title: String
  userId: Int
}

type Query {
  firstUser: User
  postFromUser(userId: Int!): Post
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

type User {
  id: Int
  name: String
  posts: [Post]
}

schema {
  query: Query
  mutation: Mutation
}
