tests/core/snapshots/call-operator.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "user1": {
            "name": "foo"
          }
        }
      ]
    }
  }
}
